fixed all converters